--- a/package.json
+++ b/package.json
@@ -1,27 +1,53 @@
 {
-  "name": "tlview",
+  "name": "antd-vue",
   "version": "1.0.0",
-  "description": "view components base vue.js",
-  "main": "index.js",
+  "description": "ant.design use vue2",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "browser-sync start --config build/browser.config.js",
+    "dev": "./node_modules/.bin/webpack --watch --config build/webpack.site.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tryless/tlview.git"
+    "url": "git+https://github.com/jaylinwang/antd-vue.git"
   },
   "keywords": [
-    "vue",
-    "tlview"
+    "antd",
+    "vue2",
+    "antd-vue"
   ],
-  "author": "",
+  "author": "JaylinWang",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tryless/tlview/issues"
+    "url": "https://github.com/jaylinwang/antd-vue/issues"
   },
-  "homepage": "https://github.com/tryless/tlview#readme",
+  "homepage": "https://github.com/jaylinwang/antd-vue#readme",
   "devDependencies": {
-    "eslint": "^3.13.0",
-    "eslint-config-suggest": "^1.0.0"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "cheerio": "^0.22.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "markdown-it": "^8.2.2",
+    "markdown-it-container": "^2.0.0",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "vue-loader": "^11.0.0",
+    "vue-markdown-loader": "^0.6.2",
+    "vue-router": "^2.2.1",
+    "vue-template-compiler": "^2.1.10",
+    "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "vue": "^2.1.10"
   }
 }
