--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "babel-preset-es2015": "^6.22.0",
     "cheerio": "^0.22.0",
     "css-loader": "^0.26.1",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "markdown-it": "^8.2.2",
     "markdown-it-container": "^2.0.0",
@@ -41,14 +43,14 @@
     "sass-loader": "^6.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue-loader": "^11.0.0",
+    "vue-loader": "^11.3.4",
     "vue-markdown-loader": "^0.6.2",
-    "vue-router": "^2.2.1",
-    "vue-template-compiler": "^2.1.10",
+    "vue-router": "^2.5.3",
+    "vue-template-compiler": "^2.3.2",
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "popper.js": "^1.0.8",
-    "vue": "^2.1.10"
+    "popper.js": "^1.9.1",
+    "vue": "^2.3.2"
   }
 }
