--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "serve": "browser-sync start --config build/browser.config.js",
-    "dev": "./node_modules/.bin/webpack --watch --config build/webpack.site.js"
+    "dev": "./node_modules/.bin/webpack --watch --config build/webpack.site.js",
+    "lint": "eslint -c .eslintrc.js --ignore-path .eslintignore ./"
   },
   "repository": {
     "type": "git",
