--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ant.design use vue2",
   "main": "main.js",
   "scripts": {
-    "serve": "browser-sync start --config build/browser.config.js",
+    "serve": "./node_modules/.bin/browser-sync start --config build/browser.config.js",
     "dev": "./node_modules/.bin/webpack --watch --config build/webpack.examples.js",
     "lint": "eslint -c .eslintrc --ignore-path .eslintignore ./"
   },
@@ -27,6 +27,7 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
+    "browser-sync": "^2.18.12",
     "css-loader": "^0.26.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
