--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "serve": "./node_modules/.bin/browser-sync start --config build/browser.config.js",
     "dev": "./node_modules/.bin/webpack --watch --config build/webpack.examples.js",
+    "build": "./node_modules/.bin/webpack --config build/webpack.dev.js",
     "lint": "eslint -c .eslintrc --ignore-path .eslintignore ./"
   },
   "repository": {
