--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ant.design use vue2",
   "main": "./dist/js/vueantd.js",
+  "style": "./dist/css/vueantd.css",
   "scripts": {
     "serve": "./node_modules/.bin/browser-sync start --config build/browser.config.js",
     "dev": "./node_modules/.bin/webpack --watch --config build/webpack.examples.js",
