--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   "homepage": "https://github.com/jaylinwang/VueAntd#readme",
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.4.3",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
     "css-loader": "^0.26.1",
     "eslint": "^3.19.0",
