--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "vue-loader": "^11.3.4",
     "vue-router": "^2.6.0",
     "vue-template-compiler": "^2.3.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "async-validator": "^1.7.1",
