--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "async-validator": "^1.7.1",
     "moment": "^2.18.1",
     "popper.js": "^1.10.2",
+    "uuid": "^3.1.0",
     "vue": "^2.3.2"
   }
 }
