--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueantd",
-  "version": "1.1.4",
+  "version": "1.1.5-beta",
   "description": "ant.design use vue2",
   "main": "dist/vueantd.js",
   "style": "dist/styles/vueantd.css",
