--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueantd",
-  "version": "1.1.7-beta",
+  "version": "1.1.8-beta",
   "description": "ant.design use vue2",
   "main": "dist/vueantd.js",
   "style": "dist/styles/vueantd.css",
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "async-validator": "^1.7.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "popper.js": "^1.10.2",
     "uuid": "^3.1.0",
