--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
+    "clipboard": "^1.7.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
@@ -50,8 +51,10 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
+    "highlight.js": "^9.12.0",
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "markdown-it-container": "^2.0.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
